2021-08-05  Kate Cheney  <katherine_cheney@apple.com>

        LoadWebArchive.FailNavigation1 test is a false positive
        https://bugs.webkit.org/show_bug.cgi?id=228848
        <rdar://problem/81587448>

        Reviewed by Brent Fulgham.

        Update LoadWebArchive.FailNavigation1 to test the case of a webarchive
        being loaded with a host for better test coverage.

        * TestWebKitAPI/Tests/mac/load-web-archive-1.html:

2021-08-05  Ryan Haddad  <ryanhaddad@apple.com>

        REGRESSION (r279855): TestWebKitAPI.AppleLanguagesTest.UpdateAppleLanguages is failing
        https://bugs.webkit.org/show_bug.cgi?id=228309

        Unreviewed test gardening.

        This test has been skipped on Apple Silicon because of timeouts, and
        now it is a flaky failure on Intel machines. Disable it outright for
        the time be ing.

        * TestWebKitAPI/Tests/WebKit/OverrideAppleLanguagesPreference.mm:
        (TEST_F):

2021-08-05  Zan Dobersek  <zdobersek@igalia.com>

        run-jsc-stress-tests: detect the riscv64 architecture
        https://bugs.webkit.org/show_bug.cgi?id=228817

        Reviewed by Adrian Perez de Castro.

        * Scripts/run-jsc-stress-tests: Detect the riscv64 architecture when
        examining ELF binaries. For the moment, this architecture should be
        marked as not supporting FTL.

2021-08-04  Peng Liu  <peng.liu6@apple.com>

        [Catalina][GPUP] Some API tests fail after GPU Process features are enabled
        https://bugs.webkit.org/show_bug.cgi?id=228589

        Reviewed by Jer Noble.

        * TestWebKitAPI/Tests/WebKitCocoa/AudioBufferSize.mm:
        (TestWebKitAPI::TEST):

2021-08-04  Jonathan Bedard  <jbedard@apple.com>

        [check-github-mirror-integrity] Store remote cache in checkout
        https://bugs.webkit.org/show_bug.cgi?id=228792
        <rdar://problem/81527357>

        Reviewed by Aakash Jain.
